--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-            <!-- <li data-target="#carouselExampleIndicators" data-slide-to="6"></li> -->
+            <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
           </ol>
           <div class="carousel-inner">
 
@@ -395,17 +395,18 @@
             </div>
 
             <!-- PROJECT 7 : Slam -->
-<!--             <div class="carousel-item">
+            <div class="carousel-item">
               <a class="scrollto active" href="#project7">
                 <img class="mx-auto d-block w-50" src="images/projects/project7.png" alt="Sixth slide">
               </a>
               <div class="carousel-caption d-none d-md-block">
                 <a class="scrollto active" href="#project7">
-                  <h5>Optimized Pipeline for the modelling of Spiking Neural Networks (SNNs)</h5>
+                  <h5>Development of the SLAM -Surface anaLysis And Modeling- python package</h5>
                 </a>
-                <p>by Alberto Vergani, Laurent Perrinet & Julia Sprenger</p>
+                <p>by Alexandre Pron, Guillaume Auzias & the MeCA Team</p>
               </div>
-            </div> -->
+            </div>
+
             <!-- <div class="carousel-item">
               <a class="scrollto active" href="#project1">
                 <img class="mx-auto d-block w-50" src="images/projects/project1.svg" alt="First slide">
@@ -936,6 +937,83 @@
         </div>
         <hr style="height:20px">
     <!-- ============ End of Project6 =============== -->
+
+
+    <!-- ======= Project7 description bullet ======= -->
+      <a class="active" id="project7">
+        <div class="row justify-content-center align-items-center">
+      </a>
+
+          <div class="col-lg-4 col-md-5 col-sm-8 col-xs-1 col-md-2">
+            <img src="images/projects/project7.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col">
+
+            <div class="container my-4">
+
+              <!-- <a id="project1"> -->
+              <h3>Development of the SLAM -Surface anaLysis And Modeling- python package</h3>
+              <!-- </a> -->
+              <p>
+                by <a style="color: black" href="https://github.com/alexpron">Alexandre Pron</a>, Guillaume Auzias & the <a href="http://meca-brain.org/">MeCA team</a>
+              </p>
+
+              <hr>
+
+              <button class="btn btn-link btn-outline-primary font-weight-bold" data-toggle="collapse" href="#collapse_project7" role="button" aria-controls="collapse_project7"><h4>Description</h3></button>
+
+              <section class="collapse" id="collapse_project7">
+                <a href="https://brain-slam.github.io/slam/">Slam</a> is an open source python package dedicated to the representation of neuroanatomical surfaces stemming from MRI data in the form of triangular meshes and to their processing and analysis.
+                <br>
+                Main features include read/write gifti (and nifti) file format, geodesic distance computation, several implementations of graph Laplacian and Gradient, mesh surgery (boundary identification, large hole closing), several types of mapping between the mesh and a sphere, a disc… Have a look at the examples on the <a href="https://brain-slam.github.io/slam/auto_examples/index.html">documentation website</a>: 
+                <br>
+                The following points are going to be addressed in this project:
+                <ul>
+                  <li>Further improve the documentation</li>
+                  <li>Further improve the code quality of slam 's core functions (code linting, docstrings, refactoring, utils module)</li>
+                  <li>Further improve code quality with new unitest and potential speed-up of specific pieces of code such as for instance the computation of the curvature</li>
+                  <li>Help potential users to get familiar with this python package</li>
+                  <li>Brainstorm about slam perimeter</li>
+                  <li>Design a logo</li>
+                </ul>
+                We are of course also open if new features are proposed from the contributors.
+              </section>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col" data-aos="fade-left" data-aos-delay="100">
+            <h4>Required skills</h4>
+            This is a Python project, enthusiasm and coding skills are required:
+          </div>
+        </div>
+
+        <div class="row justify-content-center mt-4">
+
+            <div class="progress">
+              <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 100%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Share ideas and good time 100%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Python programming 50%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 20%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Mesh processing 20%
+              </div>
+            </div>
+
+        </div>
+        <hr style="height:20px">
+    <!-- ============ End of Project7 =============== -->
 
     </section>
 
