fixed title project 6

--- a/index.html
+++ b/index.html
@@ -872,7 +872,7 @@
             <div class="container my-4">
 
               <!-- <a id="project1"> -->
-              <h3>Going beyond pairwise interactions by digging into Higher-Order Interactions</h3>
+              <h3>Macapype: external pipelines</h3>
               <!-- </a> -->
               <p>
                 by <a style="color: black" href="https://github.com/davidmeunier79">David Meunier</a>, Kepkee Loh, Julien Sein, Bastien Cagna & Olivier Coulon
