added information to project 6

--- a/index.html
+++ b/index.html
@@ -939,7 +939,7 @@
     <!-- ============ End of Project6 =============== -->
 
 
-    <!-- ======= Project7 description bullet ======= -->
+    <!-- ======= Project7 SLAM ======= -->
       <a class="active" id="project7">
         <div class="row justify-content-center align-items-center">
       </a>
@@ -964,16 +964,19 @@
               <button class="btn btn-link btn-outline-primary font-weight-bold" data-toggle="collapse" href="#collapse_project7" role="button" aria-controls="collapse_project7"><h4>Description</h3></button>
 
               <section class="collapse" id="collapse_project7">
+                Tasks and objectives we would like to achieve can be found in the <a href="https://github.com/orgs/brain-slam/projects/1">brain-slam github project</a>.
+                <br>
                 <a href="https://brain-slam.github.io/slam/">Slam</a> is an open source python package dedicated to the representation of neuroanatomical surfaces stemming from MRI data in the form of triangular meshes and to their processing and analysis.
                 <br>
                 Main features include read/write gifti (and nifti) file format, geodesic distance computation, several implementations of graph Laplacian and Gradient, mesh surgery (boundary identification, large hole closing), several types of mapping between the mesh and a sphere, a disc… Have a look at the examples on the <a href="https://brain-slam.github.io/slam/auto_examples/index.html">documentation website</a>: 
                 <br>
+                <br>
                 The following points are going to be addressed in this project:
                 <ul>
+                  <li>Help potential users to get familiar with this python package. The first BrainHack day could be considered as a training session for slam users</li>
                   <li>Further improve the documentation</li>
                   <li>Further improve the code quality of slam 's core functions (code linting, docstrings, refactoring, utils module)</li>
                   <li>Further improve code quality with new unitest and potential speed-up of specific pieces of code such as for instance the computation of the curvature</li>
-                  <li>Help potential users to get familiar with this python package</li>
                   <li>Brainstorm about slam perimeter</li>
                   <li>Design a logo</li>
                 </ul>
