fixed registration section

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
         <p align="center">To register to the event, please click on the button below to fill the form. The <b>deadline for registration</b> is Sunday 28 November.<br><b>Registration is now closed.</b>
           <br>
-          For <b>late registration</b>, you should anyway fill the form (press on the grey registration button) and sent an <a href="mailto:brainhack.marseille@gmail.com" title="brainhack.marseille@gmail.com">email to the organization team</a>. 
+          For <b>late registration</b>, you should anyway fill the form (press on the grey 'REGISTER' button) and send an <a href="mailto:brainhack.marseille@gmail.com" title="brainhack.marseille@gmail.com">email to the organization team</a>. 
           <br>Lunch and social event <b>are not guaranteed</b> for late registrations.</p>
 
         <div class="d-flex justify-content-center">
