--- a/index.html
+++ b/index.html
@@ -316,6 +316,7 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
           </ol>
           <div class="carousel-inner">
 
@@ -400,13 +401,26 @@
             <!-- PROJECT 7 : Slam -->
             <div class="carousel-item">
               <a class="scrollto active" href="#project7">
-                <img class="mx-auto d-block w-50" src="images/projects/project7.png" alt="Sixth slide">
+                <img class="mx-auto d-block w-50" src="images/projects/project7.png" alt="Seventh slide">
               </a>
               <div class="carousel-caption d-none d-md-block">
                 <a class="scrollto active" href="#project7">
                   <h5>Development of the SLAM -Surface anaLysis And Modeling- python package</h5>
                 </a>
                 <p>by Alexandre Pron, Guillaume Auzias & the MeCA Team</p>
+              </div>
+            </div>
+
+            <!-- PROJECT 8 : MRI-diffusion -->
+            <div class="carousel-item">
+              <a class="scrollto active" href="#project8">
+                <img class="mx-auto d-block w-50" src="images/projects/project8.png" alt="Eighth slide">
+              </a>
+              <div class="carousel-caption d-none d-md-block">
+                <a class="scrollto active" href="#project8">
+                  <h5> Tools for MRI diffusion in human and NHP</h5>
+                </a>
+                <p>by Julien Sein, David Meunier, Arnaud Le Troter & Hugo Dary</p>
               </div>
             </div>
 
@@ -590,18 +604,6 @@
               </div>
             </div>
 
-<!--             <div class="progress">
-              <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                Skill 3 50%
-              </div>
-            </div>
-
-            <div class="progress">
-              <div class="progress-bar bg-warning font-weight-bold" role="progressbar" style="width: 20%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                Skill 4 20%
-              </div>
-            </div> -->
-
         </div>
         <hr style="height:20px">
     <!-- ============ End of Project2 =============== -->
@@ -677,11 +679,6 @@
               </div>
             </div>
 
-<!--             <div class="progress">
-              <div class="progress-bar bg-warning font-weight-bold" role="progressbar" style="width: 20%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                Skill 4 20%
-              </div>
-            </div> -->
 
         </div>
         <hr style="height:20px">
@@ -750,18 +747,6 @@
                 Python programming 70%
               </div>
             </div>
-
-<!--             <div class="progress">
-              <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 60%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                Python programming 60%
-              </div>
-            </div> -->
-
-<!--             <div class="progress">
-              <div class="progress-bar bg-warning font-weight-bold" role="progressbar" style="width: 20%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                Skill 4 20%
-              </div>
-            </div> -->
 
         </div>
         <hr style="height:20px">
@@ -933,7 +918,7 @@
 
             <div class="progress">
               <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 60%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                Nipype 75%
+                Nipype 60%
               </div>
             </div>
 
@@ -971,7 +956,7 @@
                 <br>
                 <a href="https://brain-slam.github.io/slam/">Slam</a> is an open source python package dedicated to the representation of neuroanatomical surfaces stemming from MRI data in the form of triangular meshes and to their processing and analysis.
                 <br>
-                Main features include read/write gifti (and nifti) file format, geodesic distance computation, several implementations of graph Laplacian and Gradient, mesh surgery (boundary identification, large hole closing), several types of mapping between the mesh and a sphere, a disc… Have a look at the examples on the <a href="https://brain-slam.github.io/slam/auto_examples/index.html">documentation website</a>: 
+                Main features include read/write gifti (and nifti) file format, geodesic distance computation, several implementations of graph Laplacian and Gradient, mesh surgery (boundary identification, large hole closing), several types of mapping between the mesh and a sphere, a disc… Have a look at the examples on the <a href="https://brain-slam.github.io/slam/auto_examples/index.html">documentation website</a>.
                 <br>
                 <br>
                 The following points are going to be addressed in this project:
@@ -1020,6 +1005,77 @@
         </div>
         <hr style="height:20px">
     <!-- ============ End of Project7 =============== -->
+
+
+    <!-- ======= Project8 MRI-diffusion ======= -->
+      <a class="active" id="project8">
+        <div class="row justify-content-center align-items-center">
+      </a>
+
+          <div class="col-lg-4 col-md-5 col-sm-8 col-xs-1 col-md-2">
+            <img src="images/projects/project8.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col">
+
+            <div class="container my-4">
+
+              <!-- <a id="project1"> -->
+              <h3>Tools for MRI diffusion in human and NHP</h3>
+              <!-- </a> -->
+              <p>
+                by <a style="color: black" href="https://github.com/julfou81">Julien Sein</a>, David Meunier, Arnaud Le Troter & Hugo Dary
+              </p>
+
+              <hr>
+
+              <button class="btn btn-link btn-outline-primary font-weight-bold" data-toggle="collapse" href="#collapse_project8" role="button" aria-controls="collapse_project8"><h4>Description</h3></button>
+
+              <section class="collapse" id="collapse_project8">
+                There are many pipelines for processing diffusioin MRI data (diffuse, qsiprep, mrtrix pipelines, FSL pipelines, dipy, designers, etc.) 
+                <br>
+                <br>
+                The following points are going to be addressed in this project:
+                <ul>
+                  <li>We aim at sharing expertise, identify specific problems encountered by users, and define quality metrics (quality of orientation vectors, quality check)</li>
+                  <li>(NHP specific) : We also aim at integrating segmentations computed externally to mrtrix and FSL pipelines, that are non-specific pipelines (i.e. also available for human images)</li>
+                </ul>
+              </section>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col" data-aos="fade-left" data-aos-delay="100">
+            <h4>Required skills</h4>
+            For this project general knowledges about MRI pipelines are recommended:
+          </div>
+        </div>
+
+        <div class="row justify-content-center mt-4">
+
+            <div class="progress">
+              <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Building pipelines 70%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                MRI diffusion 50%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                MRI processing 50%
+              </div>
+            </div>
+
+        </div>
+        <hr style="height:20px">
+    <!-- ============ End of Project8 =============== -->
 
     </section>
 
