Minor changes to the program (on the python tutorial)

--- a/index.html
+++ b/index.html
@@ -185,16 +185,9 @@
                 Participants can chose to attend one of the two parallel sessions:
                 <br>
                 <b>Parallel session 1: Hacking</b>
-                  <br>
-                  <br>
-                  <b>Parallel session 2: Introduction to Python by Julia Sprenger</b>
-                <p>In this hands-on session we will set up Python and go through the first steps of using this popular scientific programming language. The session consists of two parts:
-                  <ul>
-                    <li>setting up Anaconda/<a href="https://docs.conda.io/en/latest/miniconda.html">Miniconda</a> (including creating a virtual environment); duration 1h</li>
-                    <li>a type-along tutorial giving an overview of the basic concepts of Python (finding your way in Python, basic data types, variables, advanced types, loops, etc...); duration 1h15</li>
-                  </ul>
-                The session will take place in-person. Please bring a working laptop with wifi access to participate in the session. If you already have Anaconda or <a href="https://docs.conda.io/en/latest/miniconda.html">Miniconda</a> installed, feel free to join after the first part of the session.
-                </p>
+                <br>
+                <b>Parallel session 2: Python for non-programmers, a <a href="https://docs.google.com/document/d/1FXuj_yCW_9gXiR3rOgnBAULweboOQnAwDCx_vHa3-60/edit?usp=sharing">tutorial</a> by Julia Sprenger</b>
+                <br>
               </td>
             </tr>
             <tr>
