Minor changes on the program (Lyon session)

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             </tr>
             <tr>
               <th scope="row" class="align-middle text-nowrap">11h00-12h30</th>
-              <td class="table-warning"><b>OpenSource softwares demonstrations togheter with Lyon community (Samuel Garcia - CRNL)</b>
+              <td class="table-warning"><b><a href="https://docs.google.com/document/d/1x1FjhIweS-qb9D7xleMvuuG3UpGY5Ns4qly1qbiMkUs/edit?usp=sharing">Marseille-Lyon exchange session</a>: software demos and discussion</b>
               </td>
             </tr>
             <tr>
