modified description project 8

--- a/index.html
+++ b/index.html
@@ -1025,7 +1025,8 @@
               <button class="btn btn-link btn-outline-primary font-weight-bold" data-toggle="collapse" href="#collapse_project8" role="button" aria-controls="collapse_project8"><h4>Description</h3></button>
 
               <section class="collapse" id="collapse_project8">
-                There are many pipelines for processing diffusioin MRI data (diffuse, qsiprep, mrtrix pipelines, FSL pipelines, dipy, designers, etc.) 
+                There are many pipelines for processing diffusion MRI data (diffuse, qsiprep, mrtrix pipelines, FSL pipelines, dipy, Designer, etc.). For newcomers in the field of Diffusion MRI, it may be overwhelming to pick the tools that best fits the needs, as well as to define the needs themselves.
+                (NHP specific) : NHP image processing has specific challenges such as image reorientation, which can be more tricky when the Diffusion Vectors as to follow the transformation applied to the diffusion images.
                 <br>
                 <br>
                 The following points are going to be addressed in this project:
