--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <br>
                 <b>Parallel session 1: Hacking</b>
                 <br>
-                <b>Parallel session 2: Python for non-programmers, a <a href="https://docs.google.com/document/d/1FXuj_yCW_9gXiR3rOgnBAULweboOQnAwDCx_vHa3-60/edit?usp=sharing">tutorial</a> by Julia Sprenger</b>
+                <b>Parallel session 2: Python for non-programmers, a <a style="color: steelblue;" href="https://docs.google.com/document/d/1FXuj_yCW_9gXiR3rOgnBAULweboOQnAwDCx_vHa3-60/edit?usp=sharing">tutorial</a> by Julia Sprenger</b>
                 <br>
               </td>
             </tr>
@@ -223,7 +223,7 @@
             </tr>
             <tr>
               <th scope="row" class="align-middle text-nowrap">11h00-12h30</th>
-              <td class="table-warning"><b><a href="https://docs.google.com/document/d/1x1FjhIweS-qb9D7xleMvuuG3UpGY5Ns4qly1qbiMkUs/edit?usp=sharing">Marseille-Lyon exchange session</a>: software demos and discussion</b>
+              <td class="table-warning"><b><a style="color: steelblue;" href="https://docs.google.com/document/d/1x1FjhIweS-qb9D7xleMvuuG3UpGY5Ns4qly1qbiMkUs/edit?usp=sharing">Marseille-Lyon exchange session</a>: software demos and discussion</b>
               </td>
             </tr>
             <tr>
