--- a/index.html
+++ b/index.html
@@ -1113,7 +1113,7 @@
 
           <div class="col-lg-4 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
-              <div class="pic"><img src="images/team/bachar.png" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="images/team/dipankar.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Dipankar Bachar</h4>
                 <span></span>
