base for the BH 2022

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>BrainHack Marseille 2021</title>
+  <title>BrainHack Marseille 2022</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -42,7 +42,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo mr-auto"><a href="index.html">BrainHack 2021</a></h1>
+      <h1 class="logo mr-auto"><a href="index.html">BrainHack 2022</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -70,7 +70,7 @@
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
           <h1>Brainhack Marseille</h1>
-          <h2>December 6 - December 8 2021</h2>
+          <h2>November 28 - November 30 2022</h2>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
           <img id="mrs_bb" src="images/logo.svg" alt="" class="img-fluid animated">
@@ -136,7 +136,7 @@
           <h2>Register</h2>
         </div>
 
-        <p align="center">To register to the event, please click on the button below to fill the form. The <b>deadline for registration</b> is Sunday 28 November.<br><b>Registration is now closed.</b>
+        <p align="center">To register to the event, please click on the button below to fill the form. The <b>deadline for registration</b> is Tuesday 22 November.<br><b>Registration is now closed.</b>
           <br>
           For <b>late registration</b>, you should anyway fill the form (press on the grey 'REGISTER' button) and send an <a href="mailto:brainhack.marseille@gmail.com" title="brainhack.marseille@gmail.com">email to the organization team</a>. 
           <br>Lunch and social event <b>are not guaranteed</b> for late registrations.</p>
@@ -163,14 +163,18 @@
 
         <br>
 
-      <!-- ===================== December 6th ===================== -->
+      <!-- ===================== November 28th ===================== -->
         <div class="section-title">
-          <h3>6th December</h3>
+          <h3>28th November</h3>
         </div>
 
         <table class="table table-striped">
           <tbody>
             <tr>
+              <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-17h30</th>
+              <td class="table-success"><b>TODO</b></td>
+            </tr>
+<!--             <tr>
               <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-10h15</th>
               <td class="table-primary"><b>Introduction to BrainHack Marseille 2021</b>
                 <ul>
@@ -205,19 +209,22 @@
               <td class="table-warning"><b>Unconference - Remi Gau, Marie-Hélène Bourget, Martin Szinte & Sylvain Takerkart</b>
                 <p>BIDS and its recent extensions</p>
               </td>
-            </tr>
+            </tr> -->
           </tbody>
         </table>
 
-      <!-- ===================== December 7th ===================== -->
+      <!-- ===================== November 29th ===================== -->
         <div class="section-title">
-          <h3>7th December</h3>
+          <h3>29th November</h3>
         </div>
 
         <table class="table table-striped">
           <tbody>
             <tr>
-            <tr>
+              <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-17h30</th>
+              <td class="table-success"><b>TODO</b></td>
+            </tr>
+<!--             <tr>
               <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-11h00</th>
               <td class="table-success"><b>Hacking</b></td>
             </tr>
@@ -236,22 +243,23 @@
             </tr>
             <tr>
               <th scope="row" class="align-middle text-nowrap">17h00-20h00</th>
-              <td class="table-danger"><b>BHM social event!</b>
-                <!-- <p>An open electrophysiological dataset recorded in non-human primates: acquisition, curation and exploitation using open source tools (odML, neo, Elephant), <i><a href="https://www.nature.com/articles/sdata201855">(Brochier et al. Sci Data 2018)</a></i></p> -->
-              </td>
-            </tr>
+              <td class="table-danger"><b>BHM social event!</b></td>
+            </tr> -->
           </tbody>
         </table>
 
-        <!-- ===================== December 8th ===================== -->
+        <!-- ===================== November 30th ===================== -->
           <div class="section-title">
-            <h3>8th December</h3>
+            <h3>30th November</h3>
           </div>
 
           <table class="table table-striped">
             <tbody>
               <tr>
-              <tr>
+                <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-17h30</th>
+                <td class="table-success"><b>TODO</b></td>
+              </tr>
+<!--               <tr>
                 <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-11h00</th>
                 <td class="table-success"><b>Hacking</b></td>
               </tr>
@@ -278,7 +286,7 @@
               <tr>
                 <th scope="row" class="align-middle text-nowrap">16h00-17h00</th>
                 <td class="table-primary"><b>Wrapping up about the projects with everybody</b></td>
-              </tr>
+              </tr> -->
             </tbody>
           </table>
       </div>
@@ -1177,7 +1185,7 @@
                   <h4>Ruggero Basanisi</h4>
                 </a>
                 <span></span>
-                <p>PhD Student</p>
+                <p>Postdoc</p>
               </div>
             </div>
           </div>
@@ -1316,8 +1324,10 @@
           <h2>Previous Editions</h2>
         </div>
 
-        <li><a href="https://brainhack_marseille.frama.io/ref2019/" target="_blank">Brainhack Marseille 2019</a></li>
+        <li><a href="BHM_2021/BHM_2021.html" target="_blank">Brainhack Marseille 2021</a></li>
         <li><a href="BHM_2020/BHM_2020.html" target="_blank">Brainhack Marseille 2020</a></li>
+        <li><a href="https://brainhack_marseille.frama.io/ref2019/" target="_blank">Brainhack Marseille 2019</a></li>
+        
       </div>
     </section><!-- End Previous editions Section -->
 
