--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <h1>Brainhack Marseille</h1>
           <h2>November 28 - November 30 2022</h2>
         </div>
-        <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
+        <div class="col-xl-5 col-xl-5 col-lg-5 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
           <img id="mrs_bb" src="images/logo_brainhack_blanc.jpg" alt="" class="img-fluid animated">
         </div>
       </div>
