--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
           <h2>Register</h2>
         </div>
 
-        <p align="center">To register to the event, please click on the button below to fill the form. The <b>deadline for registration</b> is Tuesday 22 November.<br><b>Registration is now closed.</b>
+        <p align="center">To register to the event, please click on the button below to fill the form. The <b>deadline for registration</b> is Tuesday 22 November.<br><b>Registration is now open.</b>
           <br>
           For <b>late registration</b>, you should anyway fill the form (press on the grey 'REGISTER' button) and send an <a href="mailto:brainhack.marseille@gmail.com" title="brainhack.marseille@gmail.com">email to the organization team</a>. 
           <br>Lunch and social event <b>are not guaranteed</b> for late registrations.</p>
 
         <div class="d-flex justify-content-center">
-          <a class="btn btn-secondary" href="https://redcap.int.univ-amu.fr/surveys/?s=EAHRH4WAHCC7D7YH" title="Register now, and send the email!"><h4>REGISTER</h4></a>
+          <a class="btn btn-warning" href="https://redcap.int.univ-amu.fr/surveys/?s=LDXLWDPTMPPXWJ8F" title="Register now, and send the email!"><h4>REGISTER</h4></a>
         </div>
       </div>
     </section>
