bug fix on description button behavior

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 
               <hr>
 
-              <button class="btn btn-link btn-outline-primary font-weight-bold" data-toggle="collapse" href="#collapse_project1" role="button" aria-controls="collapse_project1"><h4>Description</h3></button>
+              <button class="btn-descript btn-link font-weight-bold" data-toggle="collapse" href="#collapse_project1" role="button" aria-controls="collapse_project1"><h4>Description</h3></button>
 
               <section class="collapse" id="collapse_project1">
                 This project aims at bringing together students and scientists aiming at understanding the brain.
